--- a/src/components/DocsHome/Languages/index.module.css
+++ b/src/components/DocsHome/Languages/index.module.css
@@ -35,10 +35,10 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
-  z-index: 1000;
   margin-left: 24px;
   transition: all var(--ifm-transition-custom-speed)
     var(--ifm-transition-custom-curve);
+  @apply z-30;
 }
 
 .callToAction:hover {
@@ -174,7 +174,6 @@
 
 .samplesContainer {
   position: relative;
-  z-index: 1000;
   display: flex;
   overflow-x: scroll;
   scroll-padding: 50% 0;
@@ -182,6 +181,7 @@
   scrollbar-width: thin;
   gap: 20px;
   margin-bottom: 120px;
+  @apply z-30;
 }
 
 .samplesContainer::-webkit-scrollbar {
